crates/rpkl-runtime/tests/snapshots/snapshot_tests__set_min_with_max_with.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "s": [
    3,
    1,
    4,
    5,
    2
  ],
  "r1": 1,
  "r2": 5
}
