crates/rpkl-runtime/tests/snapshots/snapshot_tests__set_partition.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "s": [
    1,
    2,
    3
  ],
  "r1": [
    [
      2
    ],
    [
      1,
      3
    ]
  ],
  "r2": [
    [
      1,
      3
    ],
    [
      2
    ]
  ],
  "r3": [
    [
      1,
      2,
      3
    ],
    []
  ],
  "r4": [
    [],
    [
      1,
      2,
      3
    ]
  ]
}
