crates/rpkl-runtime/tests/snapshots/snapshot_tests__set_reduce.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "s": [
    1,
    2,
    3
  ],
  "r1": 6,
  "r2": 1
}
