crates/rpkl-runtime/tests/snapshots/snapshot_tests__set_reduce_empty_error.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl_result(source)
---
Force error: Invalid operation: Cannot reduce empty Set
