crates/rpkl-runtime/tests/snapshots/snapshot_tests__set_single.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "r1": 42
}
