crates/rpkl-runtime/tests/snapshots/snapshot_tests__set_sort.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "r1": [
    1,
    2,
    3
  ],
  "r2": [
    "Barn Owl",
    "Parrot",
    "Pigeon"
  ],
  "r3": []
}
