crates/rpkl-runtime/tests/snapshots/snapshot_tests__set_sort_datasizes.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "r1": [
    "100mb",
    "11gb",
    "12tb"
  ]
}
